--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -49,11 +49,16 @@
             android:text="@{student.nickName}"/>
 
         <ImageView
+            android:visibility="gone"
             android:id="@+id/iv"
             app:userface="@{student.userface}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+        <ListView
+            android:id="@+id/lv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></ListView>
     </LinearLayout>
 
 </layout>
