--- a/app/src/main/res/layout/activity_benefit.xml
+++ b/app/src/main/res/layout/activity_benefit.xml
@@ -1,16 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools">
+
     <data>
         <import type="top.hoyouly.framework.BenefitActivity"/>
     </data>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.hui.databingding_recyclerview.MainActivity">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycleView"
+        android:clipChildren="false"
+        android:orientation="vertical">
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/srf"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycleView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+        <ProgressBar
+            android:id="@+id/gank_loading"
+            style="@android:style/Widget.DeviceDefault.ProgressBar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerInParent="true"/>
+
+        <TextView
+            android:id="@+id/gank_load_failed_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:alpha="0.7"
+            android:text="加载失败"
+            android:textColor="#4d4d4d"
+            android:textSize="20dp"
+            android:visibility="gone"/>
     </RelativeLayout>
+
 </layout>
