--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -11,15 +11,16 @@
 
     <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="96dp"
+        android:layout_height="180dp"
         android:onClick="@{gankData.onItemClick}"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/iv"
             android:layout_width="match_parent"
-            android:layout_height="96dp"
-            android:padding="6dp"
+            android:layout_height="180dp"
+            android:padding="2dp"
+            android:scaleType="centerCrop"
             app:img="@{gankData.url}"/>
 
         <LinearLayout
