--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,5 +24,12 @@
             android:onClick="android"
             android:text="Andriod 博客"/>
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:onClick="openapi"
+            android:text="Open API"/>
+
     </LinearLayout>
 </layout>
